crates/keron-lang/tests/corpus/errors/check/field_access_on_non_struct.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: field access requires a struct, found `Int` for `.x`
  --> 3:16
  |
3 | val z: Int = n.x
  |                ^
